// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Budzons Budzons 1`] = `
<div>
  <div>
    <h2
      class="overview-title"
    >
      
    Les Budzons
  
    </h2>
     
  </div>
</div>
`;

exports[`Storyshots Budzons Person details 1`] = `
<div>
  <div
    class="bg-white p-6 md:flex md:items-center"
  >
    <img
      alt="Dignissimos eaque ullam voluptatem cum."
      class="w-32 rounded-full mx-auto md:mx-0 md:w-48 md:mr-6"
      src="http://assets-service/people/face_001.jpg"
    />
     
    <div>
      <h3
        class="text-lg font-bold text-center md:text-justify"
      >
        
      Nathalie Droz
    
      </h3>
       
      <span
        class="text-justify"
      >
        Quisquam similique impedit occaecati amet hic. Nostrum laboriosam quibusdam eum dolorem. Laboriosam debitis reprehenderit delectus deleniti minima.
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Budzons Project overview 1`] = `
<div>
  <div>
    <h2
      class="overview-title"
    >
      
    Le concept
  
    </h2>
     
    <div
      class="p-6 text-justify"
    >
      <span />
    </div>
  </div>
</div>
`;

exports[`Storyshots Map French language map 1`] = `
<div>
  <div>
    <div
      aria-busy="true"
      aria-label="Loading"
      class="vld-overlay is-active z-999"
      tabindex="0"
    >
      <div
        class="vld-background"
      />
      <div
        class="vld-icon"
      >
        <svg
          height="64"
          stroke="#e78000ff"
          viewBox="0 0 38 38"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              stroke-width="2"
              transform="translate(1 1)"
            >
              <circle
                cx="18"
                cy="18"
                r="18"
                stroke-opacity=".25"
              />
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
              >
                <animatetransform
                  attributeName="transform"
                  dur="0.8s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
            </g>
          </g>
        </svg>
      </div>
    </div>
     
    <div
      class="vue2leaflet-map w-full h-3/4 leaflet-container"
      data-gesture-handling-scroll-content="CTRL + scroll pour zoomer"
      data-gesture-handling-touch-content="Utiliser 2 doigts pour bouger la carte"
      style="position: relative;"
      tabindex="0"
    >
      <!---->
      <div
        class="leaflet-pane leaflet-map-pane"
        style="left: 0px; top: 0px;"
      >
        <div
          class="leaflet-pane leaflet-tile-pane"
        />
        <div
          class="leaflet-pane leaflet-shadow-pane"
        />
        <div
          class="leaflet-pane leaflet-overlay-pane"
        />
        <div
          class="leaflet-pane leaflet-marker-pane"
        />
        <div
          class="leaflet-pane leaflet-tooltip-pane"
        />
        <div
          class="leaflet-pane leaflet-popup-pane"
        />
      </div>
      <div
        class="leaflet-control-container"
      >
        <div
          class="leaflet-top leaflet-left"
        />
        <div
          class="leaflet-top leaflet-right"
        />
        <div
          class="leaflet-bottom leaflet-left"
        />
        <div
          class="leaflet-bottom leaflet-right"
        >
          <div
            class="leaflet-control-attribution leaflet-control"
          >
            <a
              href="https://leafletjs.com"
              title="A JS library for interactive maps"
            >
              Leaflet
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map OpenStreetMap Carto with some customizations 1`] = `
<div>
  <div>
    <div
      aria-busy="true"
      aria-label="Loading"
      class="vld-overlay is-active z-999"
      tabindex="0"
    >
      <div
        class="vld-background"
      />
      <div
        class="vld-icon"
      >
        <svg
          height="64"
          stroke="#e78000ff"
          viewBox="0 0 38 38"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              stroke-width="2"
              transform="translate(1 1)"
            >
              <circle
                cx="18"
                cy="18"
                r="18"
                stroke-opacity=".25"
              />
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
              >
                <animatetransform
                  attributeName="transform"
                  dur="0.8s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
            </g>
          </g>
        </svg>
      </div>
    </div>
     
    <div
      class="vue2leaflet-map w-full h-3/4 leaflet-container"
      data-gesture-handling-scroll-content="CTRL + scroll pour zoomer"
      data-gesture-handling-touch-content="Utiliser 2 doigts pour bouger la carte"
      style="position: relative;"
      tabindex="0"
    >
      <!---->
      <div
        class="leaflet-pane leaflet-map-pane"
        style="left: 0px; top: 0px;"
      >
        <div
          class="leaflet-pane leaflet-tile-pane"
        />
        <div
          class="leaflet-pane leaflet-shadow-pane"
        />
        <div
          class="leaflet-pane leaflet-overlay-pane"
        />
        <div
          class="leaflet-pane leaflet-marker-pane"
        />
        <div
          class="leaflet-pane leaflet-tooltip-pane"
        />
        <div
          class="leaflet-pane leaflet-popup-pane"
        />
      </div>
      <div
        class="leaflet-control-container"
      >
        <div
          class="leaflet-top leaflet-left"
        />
        <div
          class="leaflet-top leaflet-right"
        />
        <div
          class="leaflet-bottom leaflet-left"
        />
        <div
          class="leaflet-bottom leaflet-right"
        >
          <div
            class="leaflet-control-attribution leaflet-control"
          >
            <a
              href="https://leafletjs.com"
              title="A JS library for interactive maps"
            >
              Leaflet
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Shop description 1`] = `
<div>
  <div
    class="flex bg-white justify-between w-full h-64 flex-row md:w-64 md:h-full md:flex-col"
  >
    <div
      class="h-auto w-48 md:h-64 md:w-full bg-cover"
      style="background-image: url(http://assets-service/shops/shop_01.jpg);"
      title="Ex dicta neque quae doloribus quam."
    />
     
    <div
      class="p-4"
    >
      <div
        class="mb-8"
      >
        <div
          class="text-black font-bold text-xl mb-2"
        >
          
        Quae consequuntur similique minus neque dolores.
      
        </div>
         
        <p
          class="text-grey-darker text-base"
        >
          
        Quaerat illum numquam adipisci quo. Mollitia eveniet esse eius tempora ex. Aliquam commodi nemo odit nihil provident.
      
        </p>
      </div>
       
      <div
        class="flex items-center"
      >
        <img
          alt="GPS coordinates"
          class="mr-4"
          src="[object Object]"
        />
         
        <div
          class="text-sm italic"
        >
          
        46.818101, 7.009292
      
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Swiss Style from xyztobixyz 1`] = `
<div>
  <div>
    <div
      aria-busy="true"
      aria-label="Loading"
      class="vld-overlay is-active z-999"
      tabindex="0"
    >
      <div
        class="vld-background"
      />
      <div
        class="vld-icon"
      >
        <svg
          height="64"
          stroke="#e78000ff"
          viewBox="0 0 38 38"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              stroke-width="2"
              transform="translate(1 1)"
            >
              <circle
                cx="18"
                cy="18"
                r="18"
                stroke-opacity=".25"
              />
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
              >
                <animatetransform
                  attributeName="transform"
                  dur="0.8s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
            </g>
          </g>
        </svg>
      </div>
    </div>
     
    <div
      class="vue2leaflet-map w-full h-3/4 leaflet-container"
      data-gesture-handling-scroll-content="CTRL + scroll pour zoomer"
      data-gesture-handling-touch-content="Utiliser 2 doigts pour bouger la carte"
      style="position: relative;"
      tabindex="0"
    >
      <!---->
      <div
        class="leaflet-pane leaflet-map-pane"
        style="left: 0px; top: 0px;"
      >
        <div
          class="leaflet-pane leaflet-tile-pane"
        />
        <div
          class="leaflet-pane leaflet-shadow-pane"
        />
        <div
          class="leaflet-pane leaflet-overlay-pane"
        />
        <div
          class="leaflet-pane leaflet-marker-pane"
        />
        <div
          class="leaflet-pane leaflet-tooltip-pane"
        />
        <div
          class="leaflet-pane leaflet-popup-pane"
        />
      </div>
      <div
        class="leaflet-control-container"
      >
        <div
          class="leaflet-top leaflet-left"
        />
        <div
          class="leaflet-top leaflet-right"
        />
        <div
          class="leaflet-bottom leaflet-left"
        />
        <div
          class="leaflet-bottom leaflet-right"
        >
          <div
            class="leaflet-control-attribution leaflet-control"
          >
            <a
              href="https://leafletjs.com"
              title="A JS library for interactive maps"
            >
              Leaflet
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Swiss lv03 projection (epsg:21781) 1`] = `
<div>
  <div>
    <div
      aria-busy="true"
      aria-label="Loading"
      class="vld-overlay is-active z-999"
      tabindex="0"
    >
      <div
        class="vld-background"
      />
      <div
        class="vld-icon"
      >
        <svg
          height="64"
          stroke="#e78000ff"
          viewBox="0 0 38 38"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              stroke-width="2"
              transform="translate(1 1)"
            >
              <circle
                cx="18"
                cy="18"
                r="18"
                stroke-opacity=".25"
              />
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
              >
                <animatetransform
                  attributeName="transform"
                  dur="0.8s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
            </g>
          </g>
        </svg>
      </div>
    </div>
     
    <div
      class="vue2leaflet-map w-full h-3/4 leaflet-container"
      data-gesture-handling-scroll-content="CTRL + scroll pour zoomer"
      data-gesture-handling-touch-content="Utiliser 2 doigts pour bouger la carte"
      style="position: relative;"
      tabindex="0"
    >
      <!---->
      <div
        class="leaflet-pane leaflet-map-pane"
        style="left: 0px; top: 0px;"
      >
        <div
          class="leaflet-pane leaflet-tile-pane"
        />
        <div
          class="leaflet-pane leaflet-shadow-pane"
        />
        <div
          class="leaflet-pane leaflet-overlay-pane"
        />
        <div
          class="leaflet-pane leaflet-marker-pane"
        />
        <div
          class="leaflet-pane leaflet-tooltip-pane"
        />
        <div
          class="leaflet-pane leaflet-popup-pane"
        />
      </div>
      <div
        class="leaflet-control-container"
      >
        <div
          class="leaflet-top leaflet-left"
        />
        <div
          class="leaflet-top leaflet-right"
        />
        <div
          class="leaflet-bottom leaflet-left"
        />
        <div
          class="leaflet-bottom leaflet-right"
        >
          <div
            class="leaflet-control-attribution leaflet-control"
          >
            <a
              href="https://leafletjs.com"
              title="A JS library for interactive maps"
            >
              Leaflet
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Swiss lv95 projection (epsg:2056) 1`] = `
<div>
  <div>
    <div
      aria-busy="true"
      aria-label="Loading"
      class="vld-overlay is-active z-999"
      tabindex="0"
    >
      <div
        class="vld-background"
      />
      <div
        class="vld-icon"
      >
        <svg
          height="64"
          stroke="#e78000ff"
          viewBox="0 0 38 38"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              stroke-width="2"
              transform="translate(1 1)"
            >
              <circle
                cx="18"
                cy="18"
                r="18"
                stroke-opacity=".25"
              />
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
              >
                <animatetransform
                  attributeName="transform"
                  dur="0.8s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
            </g>
          </g>
        </svg>
      </div>
    </div>
     
    <div
      class="vue2leaflet-map w-full h-3/4 leaflet-container"
      data-gesture-handling-scroll-content="CTRL + scroll pour zoomer"
      data-gesture-handling-touch-content="Utiliser 2 doigts pour bouger la carte"
      style="position: relative;"
      tabindex="0"
    >
      <!---->
      <div
        class="leaflet-pane leaflet-map-pane"
        style="left: 0px; top: 0px;"
      >
        <div
          class="leaflet-pane leaflet-tile-pane"
        />
        <div
          class="leaflet-pane leaflet-shadow-pane"
        />
        <div
          class="leaflet-pane leaflet-overlay-pane"
        />
        <div
          class="leaflet-pane leaflet-marker-pane"
        />
        <div
          class="leaflet-pane leaflet-tooltip-pane"
        />
        <div
          class="leaflet-pane leaflet-popup-pane"
        />
      </div>
      <div
        class="leaflet-control-container"
      >
        <div
          class="leaflet-top leaflet-left"
        />
        <div
          class="leaflet-top leaflet-right"
        />
        <div
          class="leaflet-bottom leaflet-left"
        />
        <div
          class="leaflet-bottom leaflet-right"
        >
          <div
            class="leaflet-control-attribution leaflet-control"
          >
            <a
              href="https://leafletjs.com"
              title="A JS library for interactive maps"
            >
              Leaflet
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Map Transparent layer of contour lines 1`] = `
<div>
  <div>
    <div
      aria-busy="true"
      aria-label="Loading"
      class="vld-overlay is-active z-999"
      tabindex="0"
    >
      <div
        class="vld-background"
      />
      <div
        class="vld-icon"
      >
        <svg
          height="64"
          stroke="#e78000ff"
          viewBox="0 0 38 38"
          width="64"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              stroke-width="2"
              transform="translate(1 1)"
            >
              <circle
                cx="18"
                cy="18"
                r="18"
                stroke-opacity=".25"
              />
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
              >
                <animatetransform
                  attributeName="transform"
                  dur="0.8s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
            </g>
          </g>
        </svg>
      </div>
    </div>
     
    <div
      class="vue2leaflet-map w-full h-3/4 leaflet-container"
      data-gesture-handling-scroll-content="CTRL + scroll pour zoomer"
      data-gesture-handling-touch-content="Utiliser 2 doigts pour bouger la carte"
      style="position: relative;"
      tabindex="0"
    >
      <!---->
      <div
        class="leaflet-pane leaflet-map-pane"
        style="left: 0px; top: 0px;"
      >
        <div
          class="leaflet-pane leaflet-tile-pane"
        />
        <div
          class="leaflet-pane leaflet-shadow-pane"
        />
        <div
          class="leaflet-pane leaflet-overlay-pane"
        />
        <div
          class="leaflet-pane leaflet-marker-pane"
        />
        <div
          class="leaflet-pane leaflet-tooltip-pane"
        />
        <div
          class="leaflet-pane leaflet-popup-pane"
        />
      </div>
      <div
        class="leaflet-control-container"
      >
        <div
          class="leaflet-top leaflet-left"
        />
        <div
          class="leaflet-top leaflet-right"
        />
        <div
          class="leaflet-bottom leaflet-left"
        />
        <div
          class="leaflet-bottom leaflet-right"
        >
          <div
            class="leaflet-control-attribution leaflet-control"
          >
            <a
              href="https://leafletjs.com"
              title="A JS library for interactive maps"
            >
              Leaflet
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Preview modal Modal content 1`] = `
<div>
  <div
    class="border-solid border-4 border-black h-full w-full overflow-auto"
  >
    <div
      class="absolute top-0 left-0 text-black font-extrabold m-2 cursor-pointer"
    >
      
    ✘
  
    </div>
     
    <h1
      class="font-extrabold text-4xl text-center"
    >
      
    Avant-première
  
    </h1>
     
    <p
      class="p-4"
    >
      
    Bienvenue sur l'avant-première de la Budzonnerie ! 
      <span
        class="font-bold"
      >
        Cette application est en construction.
      </span>
      
    Nous vous encourageons à la visiter régulièrement et nous faire un retour sur ce que vous en pensez au fur et à mesure de son développement. Si vous
    voyez par exemple des bugs, ou si vous pensez que votre expérience utilisateur pourrait être améliorée, n'hésitez pas à nous contacter. Nous adapterons
    notre 
      <a
        href="https://github.com/shopozor/services/milestones?direction=asc&sort=due_date&state=open"
        target="_blank"
      >
        roadmap
      </a>
       avec vos inputs.
  
    </p>
     
    <p
      class="p-4"
    >
      
    Les informations sur la Budzonnerie qui sont présentées sur la page d'accueil sont réelles. Au contraire, les données sur les Budzonneries, leurs Produits et
    Producteurs sont complètement factices pour le moment. Avec le temps, nous remplacerons petit à petit ces données de démonstration avec celles correspondant
    à l'avancement de notre projet sur le terrain.
  
    </p>
  </div>
</div>
`;

exports[`Storyshots Shops page layout Footer 1`] = `
<div>
  <div
    class="bg-green-300 p-8"
  >
    <div
      class="md:flex md:justify-start mb-4"
    >
      <div
        class="h-auto"
      >
        <span
          class="font-bold mb-2"
        >
          
        Qui sommes-nous ?
      
        </span>
         
        <ul>
          <li>
            <a
              href="/"
            >
              La Budzonnerie
            </a>
          </li>
           
          <li>
            
          Softozor
        
          </li>
           
          <li>
            
          Contact
        
          </li>
        </ul>
      </div>
       
      <div
        class="h-auto mt-8 md:mt-0 md:ml-8"
      >
        <span
          class="font-bold mb-2"
        >
          
        Nous rejoindre
      
        </span>
         
        <ul>
          <li>
            
          Rejoindre les producteurs
        
          </li>
           
          <li>
            
          Ouvrir une Budzonnerie
        
          </li>
           
          <li>
            
          Rejoindre l'équipe de développement
        
          </li>
        </ul>
      </div>
       
      <div
        class="h-auto mt-8 md:mt-0 md:ml-8"
      >
        <span
          class="font-bold mb-2"
        >
          
        Politiques
      
        </span>
         
        <ul>
          <li>
            
          Cookies
        
          </li>
           
          <li>
            
          Mots de passe
        
          </li>
        </ul>
      </div>
       
      <div
        class="h-auto mt-8 md:mt-0 md:ml-8"
      >
        <span
          class="font-bold mb-2"
        >
          
        Légal
      
        </span>
         
        <ul>
          <li>
            
          Conditions générales d'utilisation
        
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shops page layout Header 1`] = `
<div>
  <nav
    class="flex flex-no-wrap justify-start bg-orange-800 p-6"
  >
    <div
      class="flex-grow-0 mr-4"
    >
      <svg
        height="125"
        viewBox="50 75 110 125"
        width="100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m 121.40065,69.664592 c -2.17889,-0.42404 -7.71144,3.87711 -9.62273,10.80924 2.4534,0.16048 4.26606,1.29037 4.69622,2.92714 0.62757,2.4157 -1.90124,5.15992 -5.64553,6.1275 -3.74338,0.9668 -7.28284,-0.20875 -7.90375,-2.6251 -0.27922,-1.09466 0.0913,-2.31419 1.02812,-3.41615 -1.23688,0.62496 -2.39247,1.3162 -3.44486,2.08573 -3.288035,-5.27839 -11.932738,-9.43224 -14.772076,-9.81687 -0.476224,-0.0652 -0.781529,-0.0261 -0.878078,0.13047 -1.953432,3.24237 9.2544,7.55096 12.556914,12.42031 -3.843453,4.1956 -5.363585,9.40771 -3.96988,13.686018 1.007246,3.09037 4.301932,5.60496 8.4289,6.81783 1.3406,0.39403 0.98115,1.08162 0,1.57507 -1.12467,0.56494 -2.209547,1.21208 -3.121287,2.10008 -9.698267,-1.8698 -23.933708,-9.35343 -24.668006,-12.29088 -1.526004,-6.104408 -3.057096,-10.724298 -4.825648,-5.890178 -1.326512,3.62557 -3.850368,-3.93165 -7.61619,-4.12801 -1.255143,-0.0652 -2.642064,0.68629 -4.178505,2.94137 -3.445513,5.05632 1.611332,11.784388 9.780986,12.154278 7.938978,0.35879 21.525058,13.52606 26.27177,18.71312 0.491881,0.53754 1.116843,1.66913 0.481443,2.11443 -7.586181,5.31975 -14.484382,7.61971 -14.484382,11.35579 0,4.48041 12.381038,10.96671 11.319907,12.4995 -0.759349,1.09727 -10.379593,-1.65647 -7.314016,4.12097 0.649752,1.22513 1.510217,2.15253 2.531424,2.76875 -7.840733,1.03334 -17.134666,-3.21444 -23.840811,-10.88843 -2.114304,-2.43292 -3.667707,-6.62186 -5.818282,-5.68155 -2.150314,0.94071 0.260945,24.44699 23.10012,38.53382 3.32874,2.05311 6.736024,3.55485 10.111864,4.53091 0.260944,5.50019 0.89504,6.8314 -2.581916,8.60139 -4.585449,2.33441 -11.755685,8.0975 -7.170236,9.51482 4.585449,1.41732 14.512042,2.581 17.346683,0.49579 2.834642,-2.08416 3.414722,-5.91561 0.495795,-9.91746 -1.314378,-1.8026 -1.363697,-4.73223 -1.03595,-7.41474 5.291437,0.39925 10.330277,-0.5245 14.692877,-2.64663 3.45491,6.72167 3.13851,9.43863 2.92701,10.63676 -0.2492,1.41732 0.73587,2.82002 5.92619,3.17152 5.16905,0.34966 9.16594,0.0783 12.5209,-0.0261 3.25163,-0.10438 8.17109,-4.83452 3.08528,-7.33567 -5.08555,-2.50102 -7.76845,1.09988 -9.85275,-1.15077 -1.89315,-2.0445 -6.29698,-5.68337 -7.40756,-10.57921 2.1905,-2.32137 4.00119,-5.11582 5.28595,-8.37137 1.01508,-2.5733 1.64187,-5.35549 1.91299,-8.27063 2.45744,-0.0783 4.23604,-2.05547 4.10661,-3.6103 -0.23615,-2.82969 -2.30609,-1.88154 -2.82642,-3.90504 -1.06074,-4.12671 7.82782,-12.14423 6.71711,-14.25436 -0.87939,-1.67135 -7.21499,-5.90726 -11.20483,-13.17535 -0.60148,-1.09466 -1.30538,-2.72061 -0.51015,-3.66066 5.5075,-6.51266 21.97375,-15.62497 26.52358,-15.31145 3.19631,0.2205 5.02619,-0.3588 7.47946,-2.28692 6.49791,-5.106418 0.44491,-11.752678 -2.71852,-10.255508 -1.9366,0.91722 -3.16604,1.92068 -4.37983,1.33773 -0.96941,-0.46578 0.0913,-2.96224 -1.45998,-3.25072 -0.9655,-0.17874 -2.91384,4.24257 -4.0633,8.752478 -1.35952,5.33305 -20.24617,10.48527 -29.11972,10.63675 -0.66019,-0.38098 -1.36722,-0.68628 -2.08573,-0.94984 -0.90026,-0.33009 -1.14555,-0.96549 0,-1.32338 2.61884,-0.81806 5.68624,-2.12852 7.66655,-3.73255 5.16201,-4.18111 8.71725,-7.648148 10.21246,-12.276398 0.51536,-1.59567 1.11423,-2.55856 -0.18005,-4.27062 -1.20687,-1.59815 -5.96011,0.49449 -10.40647,3.22202 -4.4465,2.72817 -7.25309,5.90635 -13.77957,3.62465 -3.10172,-1.08423 -4.54527,-4.2885 -0.35228,-2.21647 5.54064,2.73809 9.31311,-1.14424 14.23257,-4.03459 4.91959,-2.88996 11.66449,-4.76655 12.12283,-2.27766 0.61453,3.33722 2.49555,3.60887 1.40506,-1.3543 -0.47883,-2.17993 -3.30095,-4.89127 -14.17516,-4.86166 -1.27733,0.004 -2.74227,0.0783 -4.2504,0.15787 2.34929,-6.27663 8.36001,-8.8151 7.41487,-10.59356 -0.14874,-0.28052 -0.39272,-0.45405 -0.7189,-0.51798 z m -9.66591,11.45664 c -0.50102,-0.003 -1.01377,0.0783 -1.51022,0.22311 -2.04907,0.61583 -3.34335,2.33454 -2.89114,3.84045 0.45405,1.50526 2.48198,2.22651 4.53092,1.61094 2.04893,-0.61583 3.34322,-2.33454 2.89113,-3.84045 -0.32748,-1.09727 -1.51817,-1.81918 -3.02069,-1.83392 z m 8.24193,52.191008 c 2.68382,1.57049 4.53587,3.76464 4.22156,5.08463 -0.14352,0.60148 -0.62105,1.9276 -1.17947,3.58877 -1.0216,-2.64428 -2.64089,-5.04666 -3.8261,-7.69525 -0.17092,-0.38098 0.42143,-1.18991 0.78414,-0.97854 z m -21.805703,2.61075 c 0.902869,3.97092 0.821976,7.77406 -0.223107,11.05374 -2.203025,-3.90569 -7.843864,-7.15928 -6.875368,-8.46478 1.22383,-1.65061 4.394698,-2.30101 7.098345,-2.58896 z"
          style="fill: #FFF; fill-opacity: 1; stroke: #000000; stroke-width: 0; stroke-miterlimit: 4; stroke-dasharray: none; stroke-opacity: 1;"
        />
      </svg>
    </div>
     
    <div
      class="flex flex-col justify-between flex-grow text-white"
    >
      <div
        class="hidden md:w-auto md:flex md:flex-row-reverse md:justify-start"
      >
        <a
          class="header"
          href="/"
        >
          Rejoindre les producteurs
        </a>
         
        <a
          class="header"
          href="/"
        >
          Ouvrir une Budzonnerie
        </a>
      </div>
       
      <div
        class="w-auto flex flex-col md:flex-row md:justify-between md:items-baseline"
      >
        <div
          class="flex flex-col"
        >
          <div
            class="font-extrabold xs:text-2xl sm:text-4xl md:text-5xl lg:text-6xl"
          >
            
          La Budzonnerie
        
          </div>
           
          <span
            class="font-bold md:text-2xl"
          >
            Juste d'ici.
          </span>
        </div>
         
        <div>
          <button
            class="inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-orange-800 hover:bg-white mt-4 uppercase"
          >
            
          S'identifier
        
          </button>
        </div>
      </div>
    </div>
  </nav>
</div>
`;
